[package]
name = "rust-blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = '0.8.5'
chrono = "0.4"
sha2 = "0.10.5"
libp2p = { version = "^0.49.0", features = ["tcp-tokio", "mdns"] }
tokio = { version = "1.24", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread", "fs", "time", "sync"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
once_cell = "1.5"
log = "0.4"
pretty_env_logger = "0.4"